--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: AWS OIDC example
+name: Deploy to AWS
 
 on:
   push:
@@ -6,13 +6,16 @@ on:
 
 permissions:
   id-token: write # This is required for requesting the JWT  
+  contents: read # This is required for actions/checkout
 
 jobs:
   deploy:
-    name: Assume AWS role
+    name: Build & Deploy
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -22,5 +25,13 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Verification step
-        run: |
-          aws s3 ls
+        run: aws s3 ls
+      
+      - name: Install dependencies
+        run: npm install -g aws-cdk
+      
+      - name: Synth stack
+        run: cdk synth
+      
+      - name: Deploy stack
+        run: cdk deploy --all --require-approval never
