--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,10 +28,10 @@ jobs:
         run: aws s3 ls
       
       - name: Install dependencies
-        run: cd cdk | npm install -g aws-cdk
+        run: npm install -g aws-cdk
       
       - name: Synth stack
-        run: cdk synth
+        run: cd cdk | cdk synth
       
       - name: Deploy stack
         run: cdk deploy --all --require-approval never
