--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,16 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
+          
+      - name: Set up Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: "16"
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
