--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,11 +21,11 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
-          
+
       - name: Set up Node
         uses: actions/setup-node@v3
         with:
-          node-version: "16"
+          node-version: "20"
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -41,7 +41,7 @@ jobs:
         run: npm install -g aws-cdk
       
       - name: Synth stack
-        run: cd cdk | cdk synth
+        run: cdk synth --app="python ${PWD}/cdk/app.py"
       
       - name: Deploy stack
-        run: cdk deploy --all --require-approval never
+        run: cdk deploy --app="python ${PWD}/cdk/app.py" --require-approval never
