--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,9 +36,12 @@ jobs:
 
       - name: Verification step
         run: aws s3 ls
-      
+
       - name: Install dependencies
         run: npm install -g aws-cdk
+
+      - name: Install requried packages
+        run: pip install -r requirements.txt
       
       - name: Synth stack
         run: cdk synth --app="python ${PWD}/cdk/app.py"
