--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,4 +49,4 @@ jobs:
           cdk synth
       
       - name: Deploy stack
-        run: cdk deploy --app="python ${PWD}/cdk/app.py" --require-approval never
+        run: cdk deploy --require-approval never
