--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,11 +44,7 @@ jobs:
         run: pip install -r requirements.txt
       
       - name: Synth stack
-        run: |
-          cd cdk 
-          cdk synth
+        run: cdk synth
       
       - name: Deploy stack
-        run: |
-          cd cdk 
-          cdk deploy --require-approval never
+        run: cdk deploy 
