--- a/lambda/pyproject.toml
+++ b/lambda/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "cdk"
+name = "mailer"
 version = "0.0.0"
 description = ""
 authors = ["David Enthoven <david.enthoven@live.nl>"]
@@ -7,8 +7,8 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-constructs = "^10.3.0"
-aws-cdk-lib = "^2.147.2"
+boto3 = "^1.34.145"
+mypy-boto3-ses = "^1.34.141"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.2.2"
