--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,7 +21,9 @@ jobs:
           python-version: "3.10"
       
       - name: Install dependencies
-        run: pip install poetry | poetry install --only dev
+        run: |
+          python -m pip install poetry==1.5.0
+          poetry install --only dev
         
       - name: Run pytest
         run: poetry run pytest --cov
